--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
-								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
+								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Suicide</span></a></li>
+								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Monthly Story</span></a></li>
+								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Suicide</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
 							</ul>
 						</nav>
@@ -60,14 +60,14 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Krisna Mughni</strong>, a <a href="https://github.com/krisnamughni24">common ningen</a> creaturee<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+								<h2 class="alt">Hi! I'm <strong>Krisna Mughni</strong><br />
+								a <a href="https://github.com/krisnamughni24">common ningen</a> creature.</h2>
+								<p>May the winds of fate lead us to intersect,<br />
+								and our paths cross once more.</p>
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+								<a href="#portfolio" class="button scrolly">let's commit suicide</a>
 							</footer>
 
 						</div>
@@ -81,7 +81,7 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>I'm seeks to unite with absurd individuals. May the winds of fate lead us to intersect, and our paths cross once more.</p>
+							<p>Amidst the chaos of existence, there was a story waiting to be told - a tale of triumph and tragedy, of love and loss, of the eternal struggle between the will to power and the limitations of the human condition.</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
@@ -141,12 +141,12 @@
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>In the dark abyss of my own mind, I heard a voice, a voice that was both familiar and strange.
+							It was the voice of my own conscience, beckoning me to confront the stark reality of my existence.</p>
+							
+							<p>"Who am I?", I asked myself, "What is my purpose in this world of eternal chaos?"</p>
+							<p>The answer, I knew, was not an easy one, for it lay buried deep within the very fabric of my being.
+							It was a question that haunted me, day and night, as I struggled to find my place in this world of pain and suffering.</p>
 
 						</div>
 					</section>
