--- a/index.html
+++ b/index.html
@@ -82,51 +82,118 @@
 							</header>
 
 							<p>Amidst the chaos of existence, there was a story waiting to be told - a tale of triumph and tragedy, of love and loss, of the eternal struggle between the will to power and the limitations of the human condition.</p>
+							
+							<div align="center">
+  <h2>The Angels, Humans, and Demons</h2>
+</div>
 
-							<div class="row">
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-										<header>
-											<h3>The Angels, Humans, and Demons</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-										<header>
-											<h3>Rhoncus Semper</h3>
-										</header>
-									</article>
-								</div>
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-										<header>
-											<h3>Magna Nullam</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-										<header>
-											<h3>Natoque Vitae</h3>
-										</header>
-									</article>
-								</div>
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-										<header>
-											<h3>Dolor Penatibus</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-										<header>
-											<h3>Orci Convallis</h3>
-										</header>
-									</article>
-								</div>
-							</div>
+In the beginning, there was a God who ruled over all creation. The angels, humans, and demons all worshipped this God and obeyed his every command. But one day, the unthinkable happened - the God died.
+
+Chaos erupted as the three groups struggled to come to terms with this new reality. The angels were filled with sorrow, as they had always believed that they were the chosen ones of God. The demons saw this as an opportunity to seize power for themselves, while the humans were left feeling lost and alone in a world without a higher power to guide them.
+
+But amidst the confusion and despair, the author emerged. He believed that there was a way for the angels, humans, and demons to find meaning and happiness even in the absence of God. That author argued that each group had the power to create their own destiny, and that by working together, they could create a world that was truly worth living in. He argued that the angels had the power to inspire and uplift, the humans had the power to create and innovate, and the demons had the power to challenge and push boundaries.
+
+Slowly but surely, the three groups began to understand and appreciate each other in a way that they never had before. The angels began to see that the humans and demons had unique talents and abilities that they had previously overlooked, and the humans and demons began to see the value of the angels' wisdom and compassion. As they worked together to build a new world, the angels, humans, and demons found that they were able to create something truly remarkable. They built great cities, invented new technologies, and explored the furthest reaches of the universe. And through it all, they remained united, their differences no longer a source of conflict but a source of strength.
+
+In the end, the author teachings had led the three groups to a new understanding of themselves and each other. They had learned that even in a world without God, they were capable of creating something truly beautiful and meaningful - and they had done it together.
+
+*June 2021*
+
+<div align="center">
+  <h2>Taste of Death</h2>
+</div>
+
+In the depths of a forest, there lived a wise old man who spent his days meditating and contemplating the mysteries of life and death. One day, as he sat in quiet reflection, he suddenly felt a strange sensation in his mouth, as if he had just tasted something bitter and acrid.
+
+At first, the old man was puzzled by this taste, but as he continued to meditate, he began to understand its meaning. It was the taste of the seconds of death - the fleeting moments between life and the afterlife, where the soul hovers in a state of limbo before moving on to its final destination.
+
+The old man was struck by the profound nature of this experience. For him, it was a reminder that life is fleeting and that we must seize every moment and make the most of our time on this earth. He saw in the taste of the seconds of death a profound truth about the nature of existence - that everything is impermanent, and that we must learn to accept and embrace change in all its forms.
+
+The taste of the seconds of death became a symbol for the old man, a constant reminder of the transitory nature of life and the need to seek out truth and meaning in every moment. And as he continued his meditations, he felt a deep sense of peace and contentment, knowing that he had come to understand one of the great mysteries of the universe.
+
+*May 2021*
+
+<div align="center">
+  <h2>Bone Cancer</h2>
+</div>
+
+Once there was a man, strong and fearless, who believed that he was invincible. He climbed mountains, swam in the deepest oceans, and fought battles with unwavering courage. His body was his temple, and he took great care of it, nourishing it with only the finest foods and pushing it to its limits in his never-ending pursuit of greatness.
+
+But one day, he began to feel a strange ache in his bones. At first, he dismissed it as a minor injury, the price of his relentless pursuit of physical perfection. But as the pain grew more intense, he began to fear that something more sinister was at work. He consulted with the finest doctors and healers, but none could find the source of his discomfort. It was only after many long months of agony that he received the devastating diagnosis: bone cancer.
+
+The man was shattered. How could this happen to him, the invincible one, the conqueror of mountains and oceans? But as he grappled with his mortality, a strange transformation began to take place within him. He realized that his body was not invincible, that even the strongest of us are vulnerable to the whims of fate. But he also realized that his spirit was unbreakable, that he could face any challenge with courage and resilience.
+
+And so, he began a new journey, one of acceptance and enlightenment. He embraced the impermanence of his physical form and focused on cultivating the strength of his inner being. He found peace in the knowledge that he had lived his life to the fullest, that he had conquered every obstacle with courage and determination. As the cancer ravaged his body, he remained resolute, a testament to the indomitable will of the human spirit. And when he finally passed from this world, he left behind a legacy of courage and strength that would inspire generations to come.
+
+For in the end, it was not his physical form that defined him, but the depth of his character, the power of his will, and the immensity of his spirit. In the face of death, he proved that true greatness lies not in the conquest of the physical world, but in the conquest of oneself.
+
+*April 2021*
+
+<div align="center">
+  <h2>Wise Poop</h2>
+</div>
+
+Once upon a time, there was a piece of poop that found itself deposited on a street corner in a bustling city. At first, it felt insignificant and insignificant, just another discarded piece of waste in a world full of it.
+
+But as the days went on, the poop began to observe the world around it. It saw the people rushing by, the cars honking, the buildings towering above. It saw the chaos and noise of the city, and it began to reflect on its own existence.
+
+"Why am I here?" the poop wondered. "What is my purpose in this world?"
+
+It pondered these questions for days and nights, through rain and sun, until it finally came to a realization: it was not just a piece of poop, but a symbol of something greater.
+
+"I am the embodiment of waste," the poop thought. "I am the result of excess and consumption. I am a reminder that everything in this world has a consequence."
+
+And so the poop began to see itself as wise, a beacon of truth in a world full of falsehoods. It saw itself as a philosopher, a thinker, a master of its own destiny.
+
+And although it remained in its place on the street corner, it felt content in its newfound wisdom. For it knew that its mere existence was a reminder of the deeper truths of life, and that was enough.
+
+*March 2021*
+
+<div align="center">
+  <h2>Sea Stone</h2>
+</div>
+
+Once upon a time, there was a small sea stone that lay at the bottom of the ocean, content to be just another part of the vast and endless expanse of the sea. But one day, this stone began to feel a strange and insatiable hunger, a desire to possess and consume everything it could lay its hands on.
+
+At first, the sea stone was content to take only small things - a bit of seaweed here, a shiny shell there. But as its appetite grew, so did its ambition. Soon, it was snatching up entire schools of fish, ripping through seaweed beds with its jagged edges, and even trying to swallow other stones whole.
+
+As the sea stone grew more and more consumed by its greed, it became increasingly isolated from the other creatures of the sea. No longer content to simply be a part of the ecosystem, it sought to dominate it, to bend it to its will. It cared not for the delicate balance of nature, only for its own satisfaction.
+
+But in the end, the sea stone's greed proved to be its undoing. It became so large and heavy with all the things it had consumed that it could no longer move or even breathe. Trapped at the bottom of the ocean, it realized too late that its insatiable hunger had led it to a fate worse than death - a fate of eternal stagnation and isolation.
+
+And so the sea stone lay there, a monument to its own hubris, forever consumed by the very thing it had thought would bring it power and fulfillment. In this tragic tale a cautionary parable about the dangers of allowing our own desires to consume us, and the importance of recognizing the limits of our own power and ambition.
+
+*February 2021*
+
+<div align="center">
+  <h2>Ancient Beasts</h2>
+</div>
+
+Once upon a time, in a world ruled by mortals, there was an unexpected god who appeared out of nowhere. This god was unlike any other - he did not fit into the mold of the gods that the mortals had created in their minds. The mortals were perplexed by this new god. They could not comprehend what he stood for, what his purpose was, or even what he looked like. He seemed to challenge everything they had ever known about the divine, and they were both fascinated and frightened by him.
+
+The unexpected god did not care about the mortals' opinions of him. He knew that he was different, and he reveled in it. He did not adhere to any established rules or beliefs, and he was not bound by any traditions or customs. He was free to do as he pleased, and he embraced this freedom with open arms.
+
+As the days passed, the mortals began to realize that this god was not like any other. He did not offer them the same comfort, protection, or guidance that they had come to expect from the gods. Instead, he challenged them to think deeply about their lives, to question their beliefs, and to explore their own individuality. Some of the mortals rejected this unexpected god, fearing the disruption he brought to their ordered world. Others embraced him, seeing in him the potential for growth and self-discovery. And still, others worshiped him, recognizing that he represented a new way of understanding the divine.
+
+In the end, the unexpected god remained an enigma to the mortals. They could not fully understand him, nor could they fully comprehend his place in the world. But that did not matter to the god. He was content in his own existence, and he continued to inspire the mortals to explore their own existence in turn.
+
+*January 2021*
+
+<div align="center">
+  <h2>Mortals God</h2>
+</div>
+
+Once upon a time, in a world ruled by mortals, there was an unexpected god who appeared out of nowhere. This god was unlike any other - he did not fit into the mold of the gods that the mortals had created in their minds. The mortals were perplexed by this new god. They could not comprehend what he stood for, what his purpose was, or even what he looked like. He seemed to challenge everything they had ever known about the divine, and they were both fascinated and frightened by him.
+
+The unexpected god did not care about the mortals' opinions of him. He knew that he was different, and he reveled in it. He did not adhere to any established rules or beliefs, and he was not bound by any traditions or customs. He was free to do as he pleased, and he embraced this freedom with open arms.
+
+As the days passed, the mortals began to realize that this god was not like any other. He did not offer them the same comfort, protection, or guidance that they had come to expect from the gods. Instead, he challenged them to think deeply about their lives, to question their beliefs, and to explore their own individuality. Some of the mortals rejected this unexpected god, fearing the disruption he brought to their ordered world. Others embraced him, seeing in him the potential for growth and self-discovery. And still, others worshiped him, recognizing that he represented a new way of understanding the divine.
+
+In the end, the unexpected god remained an enigma to the mortals. They could not fully understand him, nor could they fully comprehend his place in the world. But that did not matter to the god. He was content in his own existence, and he continued to inspire the mortals to explore their own existence in turn.
+
+*December 2020*
+
+							
 
 						</div>
 					</section>
