--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 							<div align="center">
 								<h2><strong>Taste of Death</strong></h2>
 							</div>
+							<br />
 							<p align="justify">In the depths of a forest, there lived a wise old man who spent his days meditating and contemplating the mysteries of life and death. One day, as he sat in quiet reflection, he suddenly felt a strange sensation in his mouth, as if he had just tasted something bitter and acrid.</p>
 							<p align="justify">At first, the old man was puzzled by this taste, but as he continued to meditate, he began to understand its meaning. It was the taste of the seconds of death - the fleeting moments between life and the afterlife, where the soul hovers in a state of limbo before moving on to its final destination.</p>
 							<p align="justify">The old man was struck by the profound nature of this experience. For him, it was a reminder that life is fleeting and that we must seize every moment and make the most of our time on this earth. He saw in the taste of the seconds of death a profound truth about the nature of existence - that everything is impermanent, and that we must learn to accept and embrace change in all its forms.</p>
@@ -100,6 +101,7 @@
 							<div align="center">
 								<h2><strong>Bone Cancer</strong></h2>
 							</div>
+							<br />
 							<p align="justify">Once there was a man, strong and fearless, who believed that he was invincible. He climbed mountains, swam in the deepest oceans, and fought battles with unwavering courage. His body was his temple, and he took great care of it, nourishing it with only the finest foods and pushing it to its limits in his never-ending pursuit of greatness.</p>
 							<p align="justify">But one day, he began to feel a strange ache in his bones. At first, he dismissed it as a minor injury, the price of his relentless pursuit of physical perfection. But as the pain grew more intense, he began to fear that something more sinister was at work. He consulted with the finest doctors and healers, but none could find the source of his discomfort. It was only after many long months of agony that he received the devastating diagnosis: bone cancer.</p>
 							<p align="justify">The man was shattered. How could this happen to him, the invincible one, the conqueror of mountains and oceans? But as he grappled with his mortality, a strange transformation began to take place within him. He realized that his body was not invincible, that even the strongest of us are vulnerable to the whims of fate. But he also realized that his spirit was unbreakable, that he could face any challenge with courage and resilience.</p>
@@ -112,6 +114,7 @@
 							<div align="center">
 								<h2><strong>Wise Poop</strong></h2>
 							</div>
+							<br />
 							<p align="justify">Once upon a time, there was a piece of poop that found itself deposited on a street corner in a bustling city. At first, it felt insignificant and insignificant, just another discarded piece of waste in a world full of it. But as the days went on, the poop began to observe the world around it. It saw the people rushing by, the cars honking, the buildings towering above. It saw the chaos and noise of the city, and it began to reflect on its own existence.</p>
 							<p align="justify">"Why am I here?" the poop wondered. "What is my purpose in this world?"</p>
 							<p align="justify">It pondered these questions for days and nights, through rain and sun, until it finally came to a realization: it was not just a piece of poop, but a symbol of something greater.</p>
@@ -135,6 +138,7 @@
 							<div align="center">
 								<h2><strong>Ancient Beasts</strong></h2>
 							</div>
+							<br />
 							<p align="justify">Once upon a time, in a world ruled by mortals, there was an unexpected god who appeared out of nowhere. This god was unlike any other - he did not fit into the mold of the gods that the mortals had created in their minds. The mortals were perplexed by this new god. They could not comprehend what he stood for, what his purpose was, or even what he looked like. He seemed to challenge everything they had ever known about the divine, and they were both fascinated and frightened by him.</p>
 							<p align="justify">The unexpected god did not care about the mortals' opinions of him. He knew that he was different, and he reveled in it. He did not adhere to any established rules or beliefs, and he was not bound by any traditions or customs. He was free to do as he pleased, and he embraced this freedom with open arms.</p>
 							<p align="justify">As the days passed, the mortals began to realize that this god was not like any other. He did not offer them the same comfort, protection, or guidance that they had come to expect from the gods. Instead, he challenged them to think deeply about their lives, to question their beliefs, and to explore their own individuality. Some of the mortals rejected this unexpected god, fearing the disruption he brought to their ordered world. Others embraced him, seeing in him the potential for growth and self-discovery. And still, others worshiped him, recognizing that he represented a new way of understanding the divine.</p>
@@ -146,6 +150,7 @@
 							<div align="center">
 								<h2><strong>Mortals God</strong></h2>
 							</div>
+							<br />
 							<p align="justify">Once upon a time, in a world ruled by mortals, there was an unexpected god who appeared out of nowhere. This god was unlike any other - he did not fit into the mold of the gods that the mortals had created in their minds. The mortals were perplexed by this new god. They could not comprehend what he stood for, what his purpose was, or even what he looked like. He seemed to challenge everything they had ever known about the divine, and they were both fascinated and frightened by him.</p>
 							<p align="justify">The unexpected god did not care about the mortals' opinions of him. He knew that he was different, and he reveled in it. He did not adhere to any established rules or beliefs, and he was not bound by any traditions or customs. He was free to do as he pleased, and he embraced this freedom with open arms.</p>
 							<p align="justify">As the days passed, the mortals began to realize that this god was not like any other. He did not offer them the same comfort, protection, or guidance that they had come to expect from the gods. Instead, he challenged them to think deeply about their lives, to question their beliefs, and to explore their own individuality. Some of the mortals rejected this unexpected god, fearing the disruption he brought to their ordered world. Others embraced him, seeing in him the potential for growth and self-discovery. And still, others worshiped him, recognizing that he represented a new way of understanding the divine.</p>
@@ -181,7 +186,7 @@
 
 							<p align="justify">In the dark abyss of my own mind, I heard a voice, a voice that was both familiar and strange.
 							It was the voice of my own conscience, beckoning me to confront the stark reality of my existence.</p>
-							<p align="justify">"Who am I?", I asked myself, "What is my purpose in this world of eternal chaos?"</p>
+							<p align="justify"><strong>"Who am I?"</strong>, I asked myself,<strong> "What is my purpose in this world of eternal chaos?"<strong></p>
 							<p align="justify">The answer, I knew, was not an easy one, for it lay buried deep within the very fabric of my being.
 							It was a question that haunted me, day and night, as I struggled to find my place in this world of pain and suffering.</p>
 
@@ -196,10 +201,7 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+							<p>Great humans are not born, but rather, they are made. They are not content with the ordinary or the mundane; they strive for excellence and seek to transcend their limitations. They reject the herd mentality and embrace their individuality, boldly creating their own values and forging their own path.</p>
 
 							<form method="post" action="#">
 								<div class="row">
