--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 						<div class="container">
 
 							<header>
-								<h2>Contact</h2>
+								<h2 align="center">Contact</h2>
 							</header>
 
 							<p>Great humans are not born, but rather, they are made. They are not content with the ordinary or the mundane; they strive for excellence and seek to transcend their limitations. They reject the herd mentality and embrace their individuality, boldly creating their own values and forging their own path.</p>
