Update Corruption_July 2021

--- a/index.html
+++ b/index.html
@@ -74,6 +74,19 @@
 						<div class="container">
 
 							<div align="center">
+								<h2><strong>Corruption</strong></h2>
+							</div>
+							<br />
+							<p align="justify">In a world free of corruption, humanity believed they had achieved the ultimate goal of a just and fair society. The eradication of bribery, embezzlement, and nepotism brought about a world that was prosperous, where individuals were rewarded based on their merit and hard work.</p>
+							<p align="justify">However, the disappearance of corruption had a dark and unforeseen consequence. The world had become stagnant, and progress had ground to a halt. In the absence of corruption, there was no need for competition, and without competition, there was no drive for innovation. The once prosperous world had turned into a barren wasteland, devoid of any creativity or advancement.</p>
+							<p align="justify">As society stagnated, people began to lose their sense of purpose. They had become content with their lot in life, and the pursuit of greatness had become a distant memory. The absence of corruption had created a society of mediocrity, where individuals were content with just getting by.</p>
+							<p align="justify">This newfound mediocrity had caused a shift in the collective consciousness of humanity. The once noble pursuit of excellence had given way to a nihilistic view of life. People had lost faith in their ability to achieve greatness and had accepted their fate as mere spectators in the grand play of life.</p>
+							<p align="justify">The absence of corruption had destroyed the very fabric of society. The world had become a shell of its former self, and humanity had lost its way. In this new world, there was no place for the strong or the ambitious. The will to power had been replaced with a sense of complacency, and the world had become a bleak and joyless place.</p>
+							<p align="right"><strong>July 2021</strong></p>
+							<br />
+							<br />
+							
+							<div align="center">
 								<h2><strong>The Angels, Humans, and Demons</strong></h2>
 							</div>
 							<br />
@@ -198,6 +211,7 @@
 					<section id="contact" class="four">
 						<div class="container">
 
+							<br />
 							<br />
 							<header>
 								<h2 align="center">Contact</h2>
