--- a/index.html
+++ b/index.html
@@ -72,7 +72,21 @@
 				<!-- Portfolio -->
 					<section id="portfolio" class="two">
 						<div class="container">
-
+							
+							<div align="center">
+								<h2><strong>Astronauts</strong></h2>
+							</div>
+							<p align="justify">In the vast expanse of space, a small spacecraft drifted aimlessly, carrying a group of astronauts who had been sent on a mission to explore the outer reaches of the galaxy. They had been out for months, and their journey had been uneventful until a catastrophic malfunction caused their vessel to break down.</p>
+							<p align="justify">Now they were stranded, adrift in space with no hope of rescue, and as they looked out of their portholes, they witnessed a terrible sight. The planet they had called home, the Earth, was being destroyed before their very eyes.</p>
+							<p align="justify">The astronauts watched in horror as the blue and green orb they had once known as a source of life and beauty was torn apart by a series of violent explosions. The oceans boiled, the continents crumbled, and the atmosphere was consumed in flames.</p>
+							<p align="justify">As they watched this apocalyptic scene unfold, the astronauts were struck by a sense of profound emptiness. They had been sent out to explore the universe, to search for meaning and purpose beyond the confines of their small planet. And now, as they witnessed the destruction of their home world, they realized the futility of their quest.</p>
+							<p align="justify">For Nietzsche, this would have been a moment of existential crisis. The astronauts were faced with the realization that all their knowledge and exploration had led them to this moment of utter despair. They had traveled far and wide, seeking truth and enlightenment, but in the end, they were left with nothing but the cold, harsh reality of the universe.</p>
+							<p align="justify">And yet, even in the face of such destruction, the astronauts found a glimmer of hope. As they watched the Earth die, they were reminded of the fragility of life and the importance of cherishing every moment. They realized that their mission, though seemingly futile, had given them a unique perspective on the universe, one that few others had ever experienced.</p>
+							<p align="justify">As they floated in the darkness, surrounded by the ruins of their once-great planet, the astronauts came to understand the truth of Nietzsche's philosophy: that life is a constant struggle, a battle against the forces of chaos and destruction. And yet, even in the face of this struggle, there is still beauty to be found, still meaning to be discovered, still a reason to keep moving forward.</p>
+							<p align="right"><strong>August 2021</strong></p>
+							<br />							
+							<br />
+							<br />
 							<div align="center">
 								<h2><strong>Corruption</strong></h2>
 							</div>
