--- a/index.html
+++ b/index.html
@@ -74,6 +74,18 @@
 						<div class="container">
 							
 							<div align="center">
+								<h2><strong>King Idiot</strong></h2>
+							</div>
+							<br />
+							<p align="justify">Once upon a time, there was an idiot named Krisna who lived in a small village in Greece. Despite his lack of intelligence, Krisna had a kind heart and was loved by all who knew him. One day, a prophecy foretold that a simpleton would ascend to the throne and become the greatest ruler the world had ever seen. The people of the village immediately thought of Krisna and urged him to go to the kingdom's capital to claim his rightful place as king.</p>
+							<p align="justify">Krisna hesitated, doubting his ability to lead an entire kingdom. He sought the advice of a wise sage who told him that he could only become a great king if he believed in himself and surrounded himself with wise advisors. With newfound confidence, Krisna set out for the capital, determined to become the king the prophecy had foretold.</p>
+							<p align="justify">As he journeyed towards the capital, Krisna encountered a group of bandits who threatened to rob and kill him. With nothing but his wits and a kind heart, Krisna managed to persuade the bandits to abandon their life of crime and join him on his quest to become king. When Krisna finally arrived at the capital, he was greeted with skepticism and ridicule. However, with the help of his newfound allies, he managed to prove himself to be a wise and just ruler. He abolished the corrupt practices of the previous rulers and instituted policies that benefited all the citizens of the kingdom.</p>
+							<p align="justify">As Krisna' reign continued, he became known as the greatest king the world had ever seen. He had transformed from an idiot to a wise ruler, from a simpleton to a visionary leader. His name would be remembered for centuries to come as an example of how even the most unlikely of individuals can rise to greatness with determination and the help of wise advisors.</p>
+							<p align="right"><strong>September 2021</strong></p>
+							<br />							
+							<br />
+							<br />
+							<div align="center">
 								<h2><strong>Astronauts</strong></h2>
 							</div>
 							<br />
@@ -84,8 +96,7 @@
 							<p align="justify">For Nietzsche, this would have been a moment of existential crisis. The astronauts were faced with the realization that all their knowledge and exploration had led them to this moment of utter despair. They had traveled far and wide, seeking truth and enlightenment, but in the end, they were left with nothing but the cold, harsh reality of the universe.</p>
 							<p align="justify">And yet, even in the face of such destruction, the astronauts found a glimmer of hope. As they watched the Earth die, they were reminded of the fragility of life and the importance of cherishing every moment. They realized that their mission, though seemingly futile, had given them a unique perspective on the universe, one that few others had ever experienced.</p>
 							<p align="justify">As they floated in the darkness, surrounded by the ruins of their once-great planet, the astronauts came to understand the truth of Nietzsche's philosophy: that life is a constant struggle, a battle against the forces of chaos and destruction. And yet, even in the face of this struggle, there is still beauty to be found, still meaning to be discovered, still a reason to keep moving forward.</p>
-							<p align="right"><strong>August 2021</strong></p>
-							<br />							
+							<p align="right"><strong>August 2021</strong></p>						
 							<br />
 							<br />
 							<div align="center">
