--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 							<header>
 								<h2 class="alt">Hi! I'm <strong>Krisna Mughni</strong><br />
-								a <a href="https://github.com/krisnamughni24">common ningen</a> creature.</h2>
+								a <a href="https://github.com/krisnamughni24">common</a> creature.</h2>
 								<p>May the winds of fate lead us to intersect,<br />
 								and our paths cross once more.</p>
 							</header>
