--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<div class="container">
 							
 							<div align="center">
-								<h2><strong>King Idiot</strong></h2>
+								<h2><strong>Mask</strong></h2>
 							</div>
 							<br />
 							<p align="justify">In the dark alleys of a forgotten city, there lived a mask. It was a simple mask, made of cheap materials and painted with a ghastly smile. The mask had no name, no identity, and no purpose. It was just another piece of art, lost in the shadows.</p>
