--- a/index.html
+++ b/index.html
@@ -72,6 +72,20 @@
 						<div class="container">
 							
 							<div align="center">
+								<h2><strong>Ugly Cat</strong></h2>
+							</div>
+							<br />
+							<p align="justify">In the dimly-lit alleyways of a forgotten city, there lived an ugly cat. It was a creature unlike any other, with matted fur and a crooked tail. It was scorned by the other cats, who hissed and spat at it whenever it approached. But the ugly cat paid them no mind, for it had learned to find beauty in the darkness.</p>
+							<p align="justify">For you see, this cat had been born with a keen sense of observation. It saw things that other cats could not see, and heard things that other cats could not hear. It watched as the shadows danced across the walls, and listened as the wind whispered secrets in its ear.</p>
+							<p align="justify">As it grew older, the ugly cat became wiser. It began to contemplate the mysteries of the universe, pondering the meaning of life and death. And so the ugly cat began to write, scribbling its thoughts on scraps of paper that it found in the gutter. It wrote about the eternal recurrence, the will to power, and the Superman. It wrote about the struggle between good and evil, and the need for self-mastery. But the other cats laughed at its writing, calling it nonsense and gibberish. They could not understand the depth of its insights, nor the beauty of its words. And so the ugly cat continued to write in solitude, finding solace in its own thoughts.</p>
+							<p align="justify">One day, a human stumbled upon the ugly cat's writings. She read them with wonder and amazement, and recognized the genius of the creature who had penned them. She published them in a book, and the world was forever changed.</p>
+							<p align="justify">For the ugly cat had shown that beauty can be found in the most unlikely of places, and that wisdom can come from the unlikeliest of sources. It had transcended its own ugliness, and become a beacon of light in a world of darkness. And though it may have been reviled by the other cats, it had achieved a greatness that they could never hope to attain.</p>
+							<p align="justify">
+							<p align="right"><strong>November 2021</strong></p>
+							<br />							
+							<br />
+							<br />
+							<div align="center">
 								<h2><strong>Mask</strong></h2>
 							</div>
 							<br />
