--- a/index.html
+++ b/index.html
@@ -70,7 +70,18 @@
 				<!-- Portfolio -->
 					<section id="portfolio" class="two">
 						<div class="container">
-							
+							<div align="center">
+								<h2><strong>Genius Dies</strong></h2>
+							</div>
+							<br />
+							<p align="justify">Once there was a genius named Krisna who was renowned for his intelligence and innovative ideas. He was always tinkering with new inventions and pushing the boundaries of what was thought possible. However, despite his brilliance, Krisna had a bit of a reputation for being absent-minded and forgetful.</p>
+							<p align="justify">One day, Krisna had a brilliant idea for a new invention that he believed would revolutionize the world. He worked tirelessly on it, putting in long hours and neglecting his own well-being. Finally, after months of work, he completed the invention and prepared to unveil it to the world. As he was setting up the demonstration, Krisna became so engrossed in his work that he failed to notice a puddle of water on the floor. He slipped and fell, hitting his head on the ground and knocking himself unconscious.</p>
+							<p align="justify">When he woke up, Krisna was horrified to discover that his invention had malfunctioned during his fall and was now spewing hot coffee all over the room. He tried to shut it off, but the controls were too complicated and he couldn't remember how to do it. Panicked, Krisna began frantically running around the room, trying to dodge the hot coffee as it sprayed out of the malfunctioning machine. Eventually, he tripped over a cord and fell into the coffee stream, drowning in the hot liquid.</p>
+							<p align="justify">The news of Krisna's ridiculous and tragic death spread quickly, and many people were shocked that such a brilliant mind could meet such a bizarre and senseless end. In the end, Krisna's legacy was forever tarnished by the absurdity of his final moments.</p>
+							<p align="right"><strong>December 2021</strong></p>
+							<br />							
+							<br />
+							<br />
 							<div align="center">
 								<h2><strong>Ugly Cat</strong></h2>
 							</div>
