--- a/index.html
+++ b/index.html
@@ -70,6 +70,20 @@
 				<!-- Portfolio -->
 					<section id="portfolio" class="two">
 						<div class="container">
+							
+							<div align="center">
+								<h2><strong>World's God Talent</strong></h2>
+							</div>
+							<br />
+							<p align="justify">In the year 2069, the world was in chaos. The old gods had grown tired and withdrawn, leaving humanity to fend for itself in a world of confusion and despair. People searched for something to believe in, something to give them hope.</p>
+							<p align="justify">And so, a talent search was launched to find a new god. People from all corners of the world came forward to audition, showcasing their unique abilities and talents. Some claimed to be able to control the elements, while others claimed to have psychic powers or the ability to communicate with spirits.</p>
+							<p align="justify">The auditions were held in a massive arena, with crowds of thousands watching on as the hopefuls took to the stage. The atmosphere was electric, with people cheering and chanting for their favorites. As the auditions continued, it became clear that there were a few standout contenders. One was a young woman from Japan, who claimed to be able to control the weather with her mind. Another was a man from Brazil, who claimed to have the power of telekinesis.</p>
+							<p align="justify">But the clear favorite was a young man from Nigeria, who had an aura of power and strength around him. He claimed to be able to heal the sick and the injured, and his presence on stage seemed to have a calming effect on the crowds. As the judges deliberated, the tension in the arena was palpable. Finally, the announcement was made: the young man from Nigeria had been chosen as the new god.</p>
+							<p align="justify">The crowds erupted into cheers and applause, and the new god took to the stage to accept his new role. He spoke of the importance of compassion, love, and unity, and vowed to use his powers to help bring peace and prosperity to the world. And so, the new god was born, chosen by the people to lead them towards a brighter future. It was a new beginning, a chance to leave behind the old gods and forge a new path for humanity.</p>
+							<p align="right"><strong>November 2021</strong></p>
+							<br />							
+							<br />
+							<br />
 							<div align="center">
 								<h2><strong>Genius Dies</strong></h2>
 							</div>
