--- a/index.html
+++ b/index.html
@@ -70,7 +70,20 @@
 				<!-- Portfolio -->
 					<section id="portfolio" class="two">
 						<div class="container">
-							
+
+							<div align="center">
+								<h2><strong>Hypersex Queen</strong></h2>
+							</div>
+							<br />
+							<p align="justify">Once upon a time, in a kingdom far, far away, there was a queen like no other. She was known as the hypersex queen, and her reputation preceded her wherever she went. Her name was Irelxn IV, and she was a woman of unparalleled beauty and sensuality. She had long, flowing locks of black hair that cascaded down her back, and eyes the color of the deep blue sea. Her curves were the envy of all women, and the desire of all men.</p>
+							<p align="justify">Irelxn IV ruled her kingdom with an iron fist, but she also had a secret side that only a select few knew about. She was insatiable when it came to her sexual desires, and she had a vast collection of lovers who would come to her whenever she beckoned. Irelxn IV's sexual appetite was the stuff of legends. She could pleasure a man for hours on end without ever tiring, and her skill in the bedroom was unmatched by any woman in the kingdom. Her lovers would leave her bedchamber exhausted and euphoric, unable to resist her charms.</p>
+							<p align="justify">Despite her reputation as a hypersexual queen, Irelxn IV was a fair and just ruler. She cared deeply for her people and worked tirelessly to ensure their well-being. But her sexual desires were a part of her that she could not ignore, and she reveled in the pleasure that they brought her.</p>
+							<p align="justify">One day, a handsome prince from a neighboring kingdom came to visit Irelxn IV. He was immediately taken with her beauty and grace, and he soon became one of her most frequent lovers. But Irelxn IV knew that their affair could never last, for he was not of her kingdom, and they could never be together.</p>
+							<p align="justify">Despite the pain of their inevitable separation, Irelxn IV continued to indulge in her sexual desires, knowing that she would never find a man who could satisfy her as completely as the handsome prince had. And so, Irelxn IV lived out her days as the hypersex queen, ruling her kingdom with fairness and justice, and indulging in the pleasure of her many lovers whenever she desired. She was a woman who knew what she wanted, and she never apologized for it.</p>
+							<p align="right"><strong>January 2021</strong></p>
+							<br />							
+							<br />
+							<br />
 							<div align="center">
 								<h2><strong>World's God Talent</strong></h2>
 							</div>
@@ -80,7 +93,7 @@
 							<p align="justify">The auditions were held in a massive arena, with crowds of thousands watching on as the hopefuls took to the stage. The atmosphere was electric, with people cheering and chanting for their favorites. As the auditions continued, it became clear that there were a few standout contenders. One was a young woman from Japan, who claimed to be able to control the weather with her mind. Another was a man from Brazil, who claimed to have the power of telekinesis.</p>
 							<p align="justify">But the clear favorite was a young man from Nigeria, who had an aura of power and strength around him. He claimed to be able to heal the sick and the injured, and his presence on stage seemed to have a calming effect on the crowds. As the judges deliberated, the tension in the arena was palpable. Finally, the announcement was made: the young man from Nigeria had been chosen as the new god.</p>
 							<p align="justify">The crowds erupted into cheers and applause, and the new god took to the stage to accept his new role. He spoke of the importance of compassion, love, and unity, and vowed to use his powers to help bring peace and prosperity to the world. And so, the new god was born, chosen by the people to lead them towards a brighter future. It was a new beginning, a chance to leave behind the old gods and forge a new path for humanity.</p>
-							<p align="right"><strong>November 2021</strong></p>
+							<p align="right"><strong>January 2022</strong></p>
 							<br />							
 							<br />
 							<br />
