--- a/index.html
+++ b/index.html
@@ -70,7 +70,20 @@
 				<!-- Portfolio -->
 					<section id="portfolio" class="two">
 						<div class="container">
-
+							
+							<div align="center">
+								<h2><strong>Suicide Cult</strong></h2>
+							</div>
+							<br />
+							<p align="justify">In the dark and eerie woods of the remote town of Ravenswood, a small group of individuals had formed a tight-knit community unlike any other. They called themselves "The Seekers," and their aim was to find a deeper meaning to life beyond what society had to offer.</p>
+							<p align="justify">Their leader, a charismatic man named Krisna, had convinced them that the only way to achieve true enlightenment was to take their own lives and journey to the afterlife together. At first, the group was hesitant, but Krisna's persuasive words and their collective desire for a higher purpose drew them closer to his teachings.</p>
+							<p align="justify">As time passed, more and more members of the community joined the Seekers, and the group's beliefs became more extreme. They would meet in secret, dressed in white robes and chanting in unison as they prepared for their final journey. The townspeople of Ravenswood had grown suspicious of the Seekers' activities and began to fear for their safety. They pleaded with them to reconsider their beliefs, but the Seekers were convinced that their cause was just and that their deaths would lead to a greater purpose.</p>
+							<p align="justify">On the fateful night of the cult's mass suicide, Krisna led his followers deep into the woods, where they would drink a poisonous concoction together and leave their earthly bodies behind.</p>
+							<p align="justify">As the group lay dying, they believed they were ascending to a higher realm of existence, free from the constraints of their mortal bodies. But in reality, they had succumbed to the delusions of a manipulative cult leader and tragically ended their lives. The town of Ravenswood was left in shock and mourning, as they tried to understand how such a tragedy could occur. The Seekers had become a cautionary tale of the dangers of blind devotion and the power of charismatic leaders.</p>
+							<p align="right"><strong>March 2022</strong></p>
+							<br />							
+							<br />
+							<br />
 							<div align="center">
 								<h2><strong>Hypersex Queen</strong></h2>
 							</div>
@@ -80,7 +93,7 @@
 							<p align="justify">Despite her reputation as a hypersexual queen, Irelxn IV was a fair and just ruler. She cared deeply for her people and worked tirelessly to ensure their well-being. But her sexual desires were a part of her that she could not ignore, and she reveled in the pleasure that they brought her.</p>
 							<p align="justify">One day, a handsome prince from a neighboring kingdom came to visit Irelxn IV. He was immediately taken with her beauty and grace, and he soon became one of her most frequent lovers. But Irelxn IV knew that their affair could never last, for he was not of her kingdom, and they could never be together.</p>
 							<p align="justify">Despite the pain of their inevitable separation, Irelxn IV continued to indulge in her sexual desires, knowing that she would never find a man who could satisfy her as completely as the handsome prince had. And so, Irelxn IV lived out her days as the hypersex queen, ruling her kingdom with fairness and justice, and indulging in the pleasure of her many lovers whenever she desired. She was a woman who knew what she wanted, and she never apologized for it.</p>
-							<p align="right"><strong>January 2021</strong></p>
+							<p align="right"><strong>February 2022</strong></p>
 							<br />							
 							<br />
 							<br />
