--- a/index.html
+++ b/index.html
@@ -72,6 +72,20 @@
 						<div class="container">
 							
 							<div align="center">
+								<h2><strong>Religion of Door Handles</strong></h2>
+							</div>
+							<br />
+							<p align="justify">In a parallel universe, there existed a dominant religion that worshipped door handles. The religion had a rich history, full of colorful myths and legends about the significance of door handles in the creation of the universe.</p>
+							<p align="justify">According to their beliefs, the door handle was the first thing that the creator of the universe touched, and it was from this touch that the universe was born. The door handle was seen as a symbol of the divine touch and was revered as a sacred object. The religion had a set of teachings and rituals that were centered around the door handle. One of the central teachings was that the door handle was the gateway to the divine, and by touching the handle, one could connect with the creator of the universe.</p>
+							<p align="justify">The religion also had a strict code of conduct that followers were expected to adhere to. They were not allowed to touch a door handle without first washing their hands and reciting a prayer. The door handle was considered too sacred to be touched by unclean hands. In their temples, the door handles were adorned with precious gems and gold. The handles were meticulously cleaned and polished every day, and special rituals were performed to honor them.</p>
+							<p align="justify">The followers of this religion were known for their impeccable manners and hygiene. They believed that cleanliness was next to godliness, and they took great care to maintain a high standard of cleanliness in their homes and public spaces. As the religion grew in popularity, it began to attract the attention of other civilizations in the galaxy. Some were fascinated by the religion's unique beliefs, while others saw it as a primitive and superstitious faith.</p>
+							<p align="justify">The religion faced its greatest challenge when a group of aliens invaded their planet. The aliens were ruthless and had no respect for the door handles that the followers of the religion held so sacred. They vandalized the temples and destroyed the door handles, causing great distress to the followers.</p>
+							<p align="justify">Despite this setback, the religion persevered. The followers of the religion refused to abandon their beliefs and continued to worship the door handle, even when it was no longer physically present. In the end, the religion proved to be resilient, and it continued to thrive in the parallel universe. The door handle remained a powerful symbol of the divine touch, and the followers of the religion remained steadfast in their devotion.</p>
+							<p align="right"><strong>April 2022</strong></p>
+							<br />							
+							<br />
+							<br />
+							<div align="center">
 								<h2><strong>Suicide Cult</strong></h2>
 							</div>
 							<br />
