--- a/index.html
+++ b/index.html
@@ -70,7 +70,20 @@
 				<!-- Portfolio -->
 					<section id="portfolio" class="two">
 						<div class="container">
-							
+
+							<div align="center">
+								<h2><strong>A World without Panties</strong></h2>
+							</div>
+							<br />
+							<p align="justify">In a world without panties, a great reckoning has befallen humanity. The once mundane act of getting dressed in the morning now becomes an existential crisis. The absence of panties has shattered the fragile fabric of our social order, exposing the underlying chaos and violence that always lurked just beneath the surface.</p>
+							<p align="justify">Without panties, the very notion of privacy has become obsolete. Bodies are on constant display, leaving little room for modesty or shame. The once hidden contours of the female form are now laid bare for all to see, inviting both admiration and exploitation.</p>
+							<p align="justify">In this new world, men have become savage predators, driven mad by their insatiable desires. Women, meanwhile, have been reduced to mere objects, valued only for their sexual appeal. The absence of panties has stripped away all notions of respect and dignity, leaving behind a world of pure, unbridled lust.</p>
+							<p align="justify">"When you stare into the abyss, the abyss stares back into you." And so it is with this world without panties. The absence of this simple garment has revealed the darkest impulses of humanity, exposing our deepest fears and desires.</p>
+							<p align="justify">Perhaps there is still hope for a better world, one where panties once again become a staple of everyday life. But until then, we must confront the brutal reality of our situation and find a way to navigate this world of carnal chaos.</p>
+							<p align="right"><strong>May 2022</strong></p>
+							<br />							
+							<br />
+							<br />
 							<div align="center">
 								<h2><strong>Religion of Door Handles</strong></h2>
 							</div>
