--- a/index.html
+++ b/index.html
@@ -75,6 +75,19 @@
 								<h2><strong>A World without Panties</strong></h2>
 							</div>
 							<br />
+							<p align="justify">In the midst of a dense forest, there stood a mighty camphor tree. Its branches stretched high towards the heavens, and its trunk was broad and imposing. For many years, the camphor tree had stood tall, proud, and strong, an emblem of nature's majesty and power.</p>
+							<p align="justify">But one day, the camphor tree began to feel a sense of sadness, a deep melancholy that seemed to emanate from within. It could not understand why it felt this way, for it had always been content with its place in the forest, and had never desired anything more than to stand tall and proud.</p>
+							<p align="justify">As the days passed, the sadness within the camphor tree grew deeper and more profound. It began to feel as if it were trapped within its own bark, as if it were suffocating beneath the weight of its own majesty. The camphor tree began to reflect on its own existence, questioning the very purpose of its being. It wondered if it was destined to forever stand alone, isolated from the world around it, or if there was some deeper meaning to its life that it had yet to discover.</p>
+							<p align="justify">Despite its deep sadness, the camphor tree refused to give up hope. It continued to reach towards the sky, seeking solace in the beauty of the natural world around it. And though it knew that its existence was fleeting, that one day it too would wither and fade away, it found a measure of comfort in the knowledge that it had stood tall and proud, a testament to the glory of nature, and the majesty of life itself.</p>
+							<p align="justify">For the camphor tree, even in its sadness, had found a measure of truth, a realization that the very act of existence was a triumph in and of itself. And so it stood, a symbol of beauty and strength, even in the face of its own inevitable demise.</p>
+							<p align="right"><strong>June 2022</strong></p>
+							<br />							
+							<br />
+							<br />
+							<div align="center">
+								<h2><strong>A World without Panties</strong></h2>
+							</div>
+							<br />
 							<p align="justify">In a world without panties, a great reckoning has befallen humanity. The once mundane act of getting dressed in the morning now becomes an existential crisis. The absence of panties has shattered the fragile fabric of our social order, exposing the underlying chaos and violence that always lurked just beneath the surface.</p>
 							<p align="justify">Without panties, the very notion of privacy has become obsolete. Bodies are on constant display, leaving little room for modesty or shame. The once hidden contours of the female form are now laid bare for all to see, inviting both admiration and exploitation.</p>
 							<p align="justify">In this new world, men have become savage predators, driven mad by their insatiable desires. Women, meanwhile, have been reduced to mere objects, valued only for their sexual appeal. The absence of panties has stripped away all notions of respect and dignity, leaving behind a world of pure, unbridled lust.</p>
