--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<div class="container">
 
 							<div align="center">
-								<h2><strong>A World without Panties</strong></h2>
+								<h2><strong>Camphor Tree</strong></h2>
 							</div>
 							<br />
 							<p align="justify">In the midst of a dense forest, there stood a mighty camphor tree. Its branches stretched high towards the heavens, and its trunk was broad and imposing. For many years, the camphor tree had stood tall, proud, and strong, an emblem of nature's majesty and power.</p>
